--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -4,7 +4,7 @@
     </head>
     <body>
 <div>
-<a href="/weather">Weather</a>
+<a href="/">Weather</a>
 <a href="/about">About</a>
 </div>
     </body>
