--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -3,8 +3,11 @@
         <link href="/css/styles.css" rel="stylesheet" type="text/css" >
     </head>
     <body>
-        <h1> This is {{title}} </h1>
+        <h1> {{title}} </h1>
         <p>{{>header}}</p>
+        <img src="/img/me.jpg">
+        <p>Hi there! My name is Shankhadeep. I am Learning new exciting things about the web everyday! </p>
+
     </body>
      <footer>
         {{>footer}}
